Fixed opening hours on smaller screens.

--- a/wwwroot/assets/styles/style.css
+++ b/wwwroot/assets/styles/style.css
@@ -44,6 +44,7 @@ input[type=text] {
     box-sizing: border-box;
   }
 
+
 /* Fonts */
 h1,
 h2,
@@ -405,6 +406,38 @@ ul.gallery li.gallery:hover {
         text-decoration: none;
         color: #fff;
         font-size: 0.7rem;
+    }
+}
+
+@media only screen and (max-width:600px){
+    .standard-text {
+        text-decoration: none;
+        color: #fff;
+        font-size: 0.9rem;
+    }
+}
+
+@media only screen and (max-width:450px){
+    .standard-text {
+        text-decoration: none;
+        color: #fff;
+        font-size: 0.8rem;
+    }
+}
+
+@media only screen and (max-width:350px){
+    .standard-text {
+        text-decoration: none;
+        color: #fff;
+        font-size: 0.6rem;
+    }
+}
+
+@media only screen and (max-width:280px){
+    .standard-text {
+        text-decoration: none;
+        color: #fff;
+        font-size: 0.5rem;
     }
 }
 
